fix: Form horizontal broken style when select item is too long
close #32777

--- a/components/form/style/horizontal.less
+++ b/components/form/style/horizontal.less
@@ -9,5 +9,7 @@
   }
   .@{form-item-prefix-cls}-control {
     flex: 1 1 0;
+    // https://github.com/ant-design/ant-design/issues/32777
+    min-width: 0;
   }
 }
